# pocketjs

./: .gitignore  DESIGN.md  README.md  WIDGET.md  package.json  pocket.json  tsconfig.json
.github/workflows/: deploy.yml  release.yml
aot/: .gitignore  README.md  package.json  play.sh
aot/compiler/: assets.ts  cjk.ts  cli.ts  context.ts  evaluate.ts  index.ts  model.ts  rom.ts  script.ts  text.ts
aot/dsl/: index.ts
aot/spec/: gen-c.ts  pjgb.ts
aot/test/: e2e-multi.ts  e2e-shendiao.ts  e2e.ts
cine/: .gitignore  README.md  package.json  play.sh
cine/compiler/: assets.ts  cjk.ts  cli.ts  emit.ts  evaluate.ts  index.ts  png.ts  residualize.ts  rom.ts  text.ts
cine/dsl/: index.ts
cine/film/: bake-logo.ts  progressive-life.ts
cine/pixellab/: client.ts  generate.ts
cine/runtime/: caption.c  cine.h  cine_gen.h  crt0.s  cue_vm.c  debug.c  fx.c  gba.h  gba.ld  input.c  irq.c  main.c  obj.c  sfx.c  tween.c  video.c
cine/spec/: cine.ts  gen-c.ts
cine/test/: crop.ts  e2e.ts  gen-placeholder-art.ts  ppm2png.ts  smoke-film.ts
compiler/: ambient.d.ts  bake-font.ts  dcpak.ts  jsx-plugin.ts  solid-plugin.ts  tailwind.ts
core/: Cargo.toml
core/src/: anim.rs  draw.rs  layout.rs  lib.rs  spec.rs  style.rs  tests.rs  text.rs  tree.rs
demos/: cards-main.tsx  cards.tsx  hero-main.tsx  hero.tsx  library-main.tsx  library.tsx  music-main.tsx  music.tsx  notifications-main.tsx  notifications.tsx  settings-main.tsx  settings.tsx  stats-main.tsx  stats.tsx
demos/cards/: app.tsx  main.tsx
demos/gallery/: app.tsx  app.vue-vapor.tsx  gen-assets.ts  tiles.ts
demos/hero/: app.tsx  main.tsx
demos/ipod-nano/: app.tsx  svc.ts
demos/launcher/: app.tsx  main.tsx
demos/music/: app.tsx  main.tsx
demos/notifications/: app.tsx  main.tsx
demos/rally/: app.tsx  game.ts
demos/rubiks/: app.tsx
demos/settings/: app.tsx  main.tsx
demos/stats/: app.tsx  main.tsx
docs/: PLATFORM.md
edge/: .gitignore  README.md  package.json  play.ts
edge/compiler/: assets.ts  cjk.ts  cli.ts  emit.ts  evaluate.ts  index.ts  png.ts  residualize.ts  rom.ts  text.ts
edge/dsl/: index.ts
edge/game/: dossier.md  see-you-on-the-moon.ts
edge/pixellab/: actionsheets.ts  cleanup.ts  client.ts  generate.ts  walkers.ts
edge/runtime/: action.c  audio.c  breakout.c  caption.c  crt0.s  cue_vm.c  debug.c  edge.h  edge_gen.h  fx.c  gba.h  gba.ld  input.c  irq.c  main.c  obj.c  sfx.c  tween.c  video.c  world.c
edge/spec/: edge.ts  gen-c.ts
edge/test/: crop.ts  e2e.ts  engine-e2e.ts  gen-placeholder-art.ts  ppm2png.ts  smoke-film.ts
host-web/: engine.js  index.html  serve.ts  wasm-ops.d.ts  wasm-ops.js
native/: Cargo.toml  build.rs
pocket3d/: .gitignore  Cargo.toml  README.md
pocket3d/crates/pocket-scene3d/: Cargo.toml
pocket3d/crates/pocket-scene3d/src/: lib.rs  renderer.rs  store.rs
pocket3d/crates/pocket-ui-wgpu/src/: render.rs  surface.rs
pocket3d/crates/pocket-widget/src/: embed.rs  shell.rs
pocket3d/crates/pocket3d-anim/: Cargo.toml
pocket3d/crates/pocket3d-anim/src/: lib.rs
pocket3d/crates/pocket3d-app/: Cargo.toml
pocket3d/crates/pocket3d-app/src/: lib.rs
pocket3d/crates/pocket3d-assets/: Cargo.toml
pocket3d/crates/pocket3d-assets/src/: glb.rs  import.rs  lib.rs  pak.rs  procedural.rs
pocket3d/crates/pocket3d-audio/: Cargo.toml
pocket3d/crates/pocket3d-audio/src/: lib.rs
pocket3d/crates/pocket3d-bsp/: Cargo.toml
pocket3d/crates/pocket3d-bsp/src/: build.rs  entity.rs  format.rs  lib.rs  reader.rs  wad.rs
pocket3d/crates/pocket3d-bsp/tests/: real_map.rs
pocket3d/crates/pocket3d-core/: Cargo.toml
pocket3d/crates/pocket3d-core/src/: camera.rs  events.rs  geom.rs  handles.rs  input.rs  lib.rs  material.rs  math.rs  mesh.rs  texture.rs  time.rs  world.rs
pocket3d/crates/pocket3d-core/tests/: basics.rs
pocket3d/crates/pocket3d-kcc/: Cargo.toml
pocket3d/crates/pocket3d-kcc/src/: lib.rs
pocket3d/crates/pocket3d-physics/: Cargo.toml
pocket3d/crates/pocket3d-physics/src/: bvh.rs  geometry.rs  lib.rs
pocket3d/crates/pocket3d-render/: Cargo.toml
pocket3d/crates/pocket3d-render-wgpu/: Cargo.toml
pocket3d/crates/pocket3d-render-wgpu/src/: lib.rs  renderer.rs  runtime.rs  shaders.rs
pocket3d/crates/pocket3d-render/src/: debug.rs  device.rs  lib.rs  scene.rs
pocket3d/crates/pocket3d-script/: Cargo.toml
pocket3d/crates/pocket3d-script/src/: lib.rs
pocket3d/crates/pocket3d-tools/: Cargo.toml
pocket3d/crates/pocket3d-tools/src/: main.rs
pocket3d/crates/pocket3d/src/: input.rs
pocket3d/examples/handheld/: Cargo.toml
pocket3d/examples/handheld/assets/dibad-psp/: profile.json
pocket3d/examples/handheld/assets/ipod-nano-2/: profile.json
pocket3d/examples/handheld/src/: device.rs  main.rs  media.rs
pocket3d/examples/openstrike/: Cargo.toml
pocket3d/examples/openstrike/assets/models/: bot.glb  weapon.glb
pocket3d/examples/openstrike/scripts/: openstrike.js
pocket3d/examples/openstrike/src/: game.rs  lib.rs  main.rs  sim.rs
pocket3d/examples/openstrike/tests/: round_loop.rs
pocket3d/examples/uihost/: Cargo.toml
pocket3d/examples/uihost/src/: main.rs
saga/: README.md
schema/: pocket-2.json
scripts/: bench-ppsspp.ts  build.ts  dev.ts  hw.ts  pocket.ts  psp-all.ts  psp.ts  site-build.ts  wasm.ts  widget.ts
sessions/: build.ts  extract.ts  nav.ts  serve.ts  templates.ts  wrangler.jsonc
site/: build.ts  home.html  nav.ts  serve.ts  templates.ts  verify.ts  wrangler.jsonc
spec/: gen-rust.ts  platforms.ts  pocket-manifest.ts  spec.ts
src/: anim.ts  components-solid.tsx  components-vue-vapor.ts  components-vue.tsx  components.ts  components.tsx  dcpak.ts  frame-solid.ts  frame.ts  hooks-solid.ts  host.ts  index.ts  input.ts  jsx.d.ts  native-tree.ts  overlay.ts  platform.ts  prelude.ts  primitives.ts  renderer-solid.ts  renderer-vue-vapor.ts  renderer.ts  runtime.ts  styles.ts
test/: app-check.test.ts  contract.ts  e2e-ppsspp.ts  golden.ts  host-build-inputs.test.ts  platform-contracts.test.ts  platform-runtime.test.ts  renderer.test.ts  site-stage.test.ts  tailwind.test.ts  widget-args.test.ts
wasm/: Cargo.toml
(+142 files in other folders)
