[package]
name = "pocket3d-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pocket3d-core.workspace = true
pocket3d-render.workspace = true
pocket3d-app.workspace = true

wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
anyhow.workspace = true
